# prototype_testdata_creator

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
CMDLINE_NAME_PLACEHOLDER/: __init__.py
CMDLINE_NAME_PLACEHOLDER/utils/: __init__.py  _test.py
test/: __init__.py  test_00.py
test/config/: __init__.py  test_00_test_connection_string.py
test/model/: __init__.py  test_00.py
test/session/: __init__.py  _helper.py  test_00_create_basic_data.py  test_01_deal_prices.py
testdata_creator/config/: __init__.py  _config_class.py  _logging.py  _testing_config.py
testdata_creator/engine/: __init__.py  _create_engine.py
testdata_creator/model/: __init__.py  _deal.py  _person.py
testdata_creator/service/: __init__.py
testdata_creator/utils/: __init__.py  _generator.py  _testdata_creator.py
