[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0",
  "wheel>=0.41"
]

[project]
authors = [ { name = "Robert Ulmer", email = "rulmer@lr.htlweiz.at" } ]

name = "CMDLINE_NAME_PLACEHOLDER"
version = "0.0.1"
description = "Cmdline description:"
readme = "README.md"
requires-python = ">3.13,<4.0"
license = "GPL-3.0-or-later"
keywords = [
  "cmdline",
]

classifiers = [
  "Development Status :: 1 - Early prototype",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python"
]

dependencies = [
]

[project.scripts]
CMDLINE_NAME_PLACEHOLDER_test = "CMDLINE_NAME_PLACEHOLDER.utils:test"

[project.urls]
"Homepage" = "https://CMDLINE_NAME_PLACEHOLDER.com"
"Documentation" = "https://CMDLINE_NAME_PLACEHOLDER.com"

[project.optional-dependencies]
lint = [
    "black",
    "codespell>=2.2.4",
    "isort",
    "ruff",
    "tomli",
    "validate-pyproject[all]",
    "vulture",
]

test = [
  "pytest"
]

vim = [
  "ollama",
  "pygls<2",
]

