[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=70.0",
  "wheel>=0.41"
]

[project]
authors = [ { name = "Robert Ulmer", email = "rulmer@lr.htlweiz.at" } ]

name = "testdata_creator"
version = "0.0.1"
description = "creat testdata:"
readme = "README.md"
requires-python = ">3.13,<4.0"
license = "GPL-3.0-or-later"
keywords = [
  "cmdline",
]

classifiers = [
  "Development Status :: 1 - Early prototype",
  "Environment :: Console",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python"
]

dependencies = [
  "sqlalchemy",
  "faker",
  "psycopg2-binary>=2.9",
]

[project.scripts]
testdata_creator_test = "testdata_creator.utils:test"
data_generator = "testdata_creator.utils:generator_main"
testdata_creator = "testdata_creator.utils:testdata_creator"

[project.urls]
"Homepage" = "https://testdata_creator.com"
"Documentation" = "https://testdata_creator.com"

[project.optional-dependencies]
lint = [
  "black",
  "codespell>=2.2.4",
  "isort",
  "ruff",
  "tomli",
  "validate-pyproject[all]",
  "vulture",
  "flake8",
]

test = [
  "pytest"
]

vim = [
  "ollama",
  "pygls<2",
]

